--- a/Asset/css/home.css
+++ b/Asset/css/home.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Mulish&family=Roboto:ital,wght@0,700;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish&family=Poppins:wght@200&family=Roboto:ital,wght@0,700;1,300&display=swap');
 
 body {
   color: #19345e;
@@ -206,4 +207,14 @@ body {
 
 .borderteam {
   border: 2px solid #f47522;
+}
+
+.readmore {
+  color: #19345e;
+  font-size: 20px;
+  font-family: 'mulish';
+}
+
+.readmore:hover {
+  color: #f47522;
 }
