--- a/Asset/css/home.css
+++ b/Asset/css/home.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Mulish&family=Roboto:ital,wght@0,700;1,300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Mulish&family=Poppins:wght@200&family=Roboto:ital,wght@0,700;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish&family=Poppins:wght@200;400;500;600&family=Roboto:ital,wght@0,700;1,300&display=swap');
 
 body {
   color: #19345e;
@@ -10,6 +8,12 @@ body {
 .lgatskr {
   width: 150px;
   margin: 10px;
+}
+.muli {
+  font-family: 'mulish';
+}
+.poppins {
+  font-family: 'poppins';
 }
 
 .buttoncontact {
@@ -217,4 +221,23 @@ body {
 
 .readmore:hover {
   color: #f47522;
+}
+
+/* home page end */
+
+.background-blog {
+  background-image: url('/Asset/images/img_blog.jpg');
+  background-size: cover;
+  height: 70vh;
+}
+.howto {
+  font-size: 70px;
+  font-weight: bold;
+  margin: 30px 0px;
+}
+
+.larry {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 30px;
 }
