--- a/Asset/css/home.css
+++ b/Asset/css/home.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish&family=Poppins:wght@200;400;500;600&family=Roboto:ital,wght@0,700;1,300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;700;900&family=Poppins:wght@100;200;400;500;600&family=Roboto:ital,wght@0,700;1,300&display=swap');
 
 body {
   color: #19345e;
@@ -14,6 +14,7 @@ body {
 }
 .poppins {
   font-family: 'poppins';
+  font-weight: 400;
 }
 
 .buttoncontact {
@@ -65,7 +66,7 @@ body {
 .hithere {
   font-size: 25px;
   color: #19345e;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 .weare {
@@ -198,6 +199,30 @@ body {
   height: 50vh;
 }
 
+.kotak {
+  border: 10px solid #19345e;
+  height: 340px;
+  width: 288px;
+  position: absolute;
+  left: 393px;
+  top: 1922px;
+}
+.kotak2 {
+  border: 10px solid #f47522;
+  height: 340px;
+  width: 288px;
+  position: absolute;
+  left: 788px;
+  top: 1880px;
+}
+.kotak3 {
+  border: 10px solid #19345e;
+  height: 340px;
+  width: 288px;
+  position: absolute;
+  left: 1185px;
+  top: 1922px;
+}
 .checknow {
   color: #19345e;
   text-decoration: none;
@@ -216,7 +241,7 @@ body {
 .readmore {
   color: #19345e;
   font-size: 20px;
-  font-family: 'mulish';
+  font-family: 'poppins';
 }
 
 .readmore:hover {
