--- a/Asset/css/home.css
+++ b/Asset/css/home.css
@@ -266,3 +266,22 @@ body {
   font-weight: bold;
   margin-bottom: 30px;
 }
+
+.footer {
+  background-color: #19345e;
+  height: 15vh;
+}
+
+.logobawah {
+  width: 150px;
+  margin: 10px;
+}
+
+.logokcl {
+  margin: 10px;
+  width: 20px;
+}
+
+.paddingfooter {
+  padding: 30px 0px;
+}
