--- a/style.css
+++ b/style.css
@@ -62,4 +62,16 @@
     padding: 10px;
     color: #000080
 }
+
+@media (max-width: 575.98px) {
+ 
+}
+
+ @media (max-width: 991.98px) { 
+
+ }
+
+ @media (max-width: 1399.98px) {
+
+  }
     
