--- a/Asset/css/home.css
+++ b/Asset/css/home.css
@@ -46,7 +46,6 @@ body {
 /* akhirnavbar */
 .isi {
   background-color: aliceblue;
-  height: 750px;
 }
 
 .gmbrhome {
@@ -55,13 +54,13 @@ body {
   width: 500px;
 }
 
-.col1 {
+/* .col1 {
   padding: 70px;
-}
+} */
 
-.col2 {
+/* .col2 {
   padding-top: 200px;
-}
+} */
 
 .hithere {
   font-size: 25px;
@@ -74,7 +73,6 @@ body {
 }
 
 .tlsan {
-  width: 60%;
   font-weight: bold;
 }
 
@@ -90,7 +88,6 @@ body {
   padding-left: 40px;
   padding-right: 30px;
   border-radius: 15px;
-  margin-top: 20px;
   transition-duration: 0.2s;
 }
 
@@ -196,33 +193,34 @@ body {
 
 .cardhome {
   margin-top: 10vh;
-  height: 50vh;
 }
 
-.kotak {
+/* .kotak {
   border: 10px solid #19345e;
   height: 340px;
   width: 288px;
   position: absolute;
-  left: 393px;
-  top: 1922px;
+  left: 390px;
+  top: 1880px;
 }
+
 .kotak2 {
   border: 10px solid #f47522;
   height: 340px;
   width: 288px;
   position: absolute;
   left: 788px;
-  top: 1880px;
+  top: 1837px;
 }
 .kotak3 {
   border: 10px solid #19345e;
   height: 340px;
   width: 288px;
   position: absolute;
-  left: 1185px;
-  top: 1922px;
-}
+  left: 1180px;
+  top: 1880px;
+} */
+
 .checknow {
   color: #19345e;
   text-decoration: none;
@@ -236,6 +234,9 @@ body {
 
 .borderteam {
   border: 2px solid #f47522;
+}
+
+.arrow {
 }
 
 .readmore {
@@ -267,9 +268,6 @@ body {
   margin-bottom: 30px;
 }
 
-.mrgintop {
-}
-
 .footer {
   background-color: #19345e;
   height: 15vh;
@@ -287,5 +285,5 @@ body {
 }
 
 .paddingfooter {
-  padding: 30px 0px;
+  padding: 50px 0px 0px 0px;
 }
