--- a/style.css
+++ b/style.css
@@ -102,6 +102,26 @@ body {
   color: #000080;
 }
 
+.footer {
+  background-color: #19345e;
+  height: 15vh;
+  margin-top: 70px;
+}
+
+.logobawah {
+  width: 150px;
+  margin: 10px;
+}
+
+.logokcl {
+  margin: 10px;
+  width: 20px;
+}
+
+.paddingfooter {
+  padding: 50px 0px 0px 0px;
+}
+
 @media (max-width: 575.98px) {
 }
 
